--- a/flume/pom.xml
+++ b/flume/pom.xml
@@ -39,4 +39,21 @@
       <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
+  <build><plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-shade-plugin</artifactId>
+      <version>2.3</version>
+      <executions>
+        <!-- Run shade goal on package phase -->
+        <execution>
+          <phase>package</phase>
+          <goals>
+            <goal>shade</goal>
+          </goals>
+        </execution>
+      </executions>
+    </plugin>
+  </plugins>
+  </build>
 </project>
